refactor: 优化 project config 管理逻辑
- 将token/basic独立到凭据管理
- 重构project config管理, 使用schema+json管理config
